chore: don't ignore lib/storage; ignore only root /storage/

--- a/.gitignore
+++ b/.gitignore
@@ -56,5 +56,8 @@ coverage/
 build/
 
 # uploads/storage
-storage/
+/storage/
 uploads/
+
+# Allow lib/storage module (code) while ignoring repo's runtime storage folder
+!lib/storage/
