--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,13 @@ BACKBLAZE_REGION=
 BACKBLAZE_BUCKET=laudos-qwork
 BACKBLAZE_KEY_ID=2a8144c04121
 BACKBLAZE_APPLICATION_KEY=0052a8144c041210000000001
+
+# Emissão imediata de laudos
+# Por padrão o sistema executa emissão imediata quando um lote fica 'concluido'.
+# Para pular essa emissão (somente para desenvolvimento) defina:
+# SKIP_IMMEDIATE_EMISSION=1
+# IMPORTANTE: Em produção esse valor será IGNORADO (SKIP não tem efeito em NODE_ENV=production).
+
 # Observações:
 # - O bucket padrão 'laudos-qwork' costuma estar configurado como PRIVATE. O backend faz streaming via SDK.
 # - Se desejar que o frontend baixe direto, implemente geração de presigned URLs ou torne objetos públicos (não recomendado).
