--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.975.0",
+    "@aws-sdk/s3-request-presigner": "^3.975.0",
     "@neondatabase/serverless": "^0.9.5",
     "@sparticuz/chromium": "^143.0.4",
     "@tanstack/react-query": "^5.90.16",
