Fix production laudo downloads: skip local cache in read-only fs, redirect to presigned URLs, link laudos 26 & 27 to Backblaze, validate env vars

--- a/.env.example
+++ b/.env.example
@@ -43,8 +43,14 @@ BACKBLAZE_ENDPOINT=
 BACKBLAZE_REGION=
 # Bucket e credenciais (substitua pelos seus valores):
 BACKBLAZE_BUCKET=laudos-qwork
-BACKBLAZE_KEY_ID=2a8144c04121
-BACKBLAZE_APPLICATION_KEY=0052a8144c041210000000001
+# Application Key ID (ex.: começa com `0052`, identif. da Key S3 — NÃO é a secret)
+# Exemplo: BACKBLAZE_KEY_ID=0052a8144c041210000000004
+BACKBLAZE_KEY_ID=0052...
+# Application Key (secret) — começa com `K` e tem ~>=32 caracteres
+# Exemplo: BACKBLAZE_APPLICATION_KEY=Kxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+BACKBLAZE_APPLICATION_KEY=Kxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Opcional: nome da Application Key (só para referência, não é obrigatório)
+# BACKBLAZE_KEY_NAME=Qwork
 
 # Emissão imediata de laudos
 # Por padrão o sistema executa emissão imediata quando um lote fica 'concluido'.
