--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "next": "^14.2.33",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
+    "pg-connection-string": "^2.10.1",
     "puppeteer": "^24.31.0",
     "puppeteer-core": "^24.36.0",
     "qrcode": "^1.5.4",
