feat: optimize Vercel build and fix Backblaze region config
- Add .vercelignore to exclude unnecessary files from deployment
- Configure installCommand with --frozen-lockfile for faster builds
- Fix BACKBLAZE_REGION from 'US East' to 'us-east-005'
- Convert batch-sync script to ES modules
- Update Backblaze client with region auto-detection from endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,6 @@
       "maxDuration": 60
     }
   },
-  "buildCommand": "pnpm build:prod"
+  "buildCommand": "pnpm build:prod",
+  "installCommand": "pnpm install --frozen-lockfile --prefer-offline"
 }
