--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "engines": {
     "node": ">=18"
   },
+  "pnpm": {
+    "overrides": {
+      "puppeteer": "$puppeteer"
+    }
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -63,8 +68,8 @@
     "db:check:orphaned-clinicas": "psql -U postgres -h localhost -p 5432 -d nr-bps_db -f database/fixes/fix_orphaned_clinica_ids.sql",
     "db:seed:all": "node scripts/db-seed-all.js",
     "prepare": "husky",
-    "postinstall": "node scripts/install-sparticuz-chromium.cjs && node scripts/install-puppeteer-chrome.cjs",
-    "vercel-build": "node scripts/install-sparticuz-chromium.cjs && node scripts/install-puppeteer-chrome.cjs && next build",
+    "postinstall": "echo 'postinstall: @sparticuz/chromium binaries are pre-bundled, no install needed'",
+    "vercel-build": "next build",
     "check-puppeteer": "tsx scripts/check-puppeteer.ts",
     "clean:root": "powershell -ExecutionPolicy Bypass -File scripts/cleanup-root.ps1",
     "check-backblaze": "tsx scripts/check-backblaze.mts"
