fix(pdf): include @sparticuz/chromium bin files in Vercel functions via includeFiles

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "functions": {
     "app/api/**/*.ts": {
       "memory": 2048,
-      "maxDuration": 60
+      "maxDuration": 60,
+      "includeFiles": [
+        "node_modules/**/@sparticuz/chromium/bin/**"
+      ]
     }
   },
   "buildCommand": "pnpm build:prod",
