--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "app/api/**/*.ts": {
       "memory": 2048,
       "maxDuration": 60,
-      "includeFiles": "node_modules/**/@sparticuz/chromium/bin/**"
+      "includeFiles": "node_modules/.pnpm/**/@sparticuz+chromium*/node_modules/@sparticuz/chromium/bin/**"
     }
   },
   "buildCommand": "pnpm build:prod",
