--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ out/
 dist/
 
 # Environment files (keep examples only in repo)
+# Local env for emissor: .env.emissor.local (do not commit)
 .env
 .env.*
 .env.local
