fix(avaliacao): redirect to comprovante on auto-complete; add E2E
- Redirect to `/avaliacao/concluida` when API returns completed=true
- Add Cypress spec `avaliacao-auto-conclusao.cy.ts` covering redirect and dashboard button for RH/Entidade
- Fix insert-login-test-data to set audit context and usuario_tipo defaults for tests
- Add migration `1007_fix_stuck_evaluations.sql` to fix stuck evaluations and laudos
- Update `package.json` test:e2e script to run with NODE_ENV=test and TEST_DATABASE_URL

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "check:insert-placeholders": "node scripts/checks/validate-insert-placeholders.cjs",
     "cypress": "cypress open",
     "cypress:headless": "cypress run",
-    "test:e2e": "npx tsx scripts/insert-login-test-data.ts && start-server-and-test 'pnpm dev:test' http://localhost:3000 cypress:headless",
+    "test:e2e": "cross-env NODE_ENV=test TEST_DATABASE_URL=postgresql://postgres:123456@localhost:5432/nr-bps_db_test npx tsx scripts/insert-login-test-data.ts && start-server-and-test \"cross-env NODE_ENV=test TEST_DATABASE_URL=postgresql://postgres:123456@localhost:5432/nr-bps_db_test pnpm dev:test\" http://localhost:3000 cypress:headless",
     "cypress:regressao:headless": "cypress run --spec \"cypress/e2e/regressao/fluxo-cadastro-regressao.cy.ts\"",
     "test:e2e:regressao": "npx tsx scripts/insert-login-test-data.ts && start-server-and-test 'pnpm dev:test' http://localhost:3000 cypress:regressao:headless",
     "dev:test": "node scripts/dev-test-cross-platform.js",
