fix: Remover abas e funcionalidades não utilizadas + adicionar asteriscos em campos obrigatórios
- Removida aba 'Planos' do dashboard da clínica (ContaSection.tsx)
- Removida aba 'Planos' do dashboard da entidade (ContaSection.tsx)
- Removida aba 'Pendências' do dashboard de empresa (TabNavigation.tsx e page.tsx)
- Removido botão 'desligar funcionário' (FuncionariosSection.tsx)
- Adicionado asterisco (*) ao campo 'Nível Cargo' no modal de inserir funcionário (clínica)
- Adicionado asterisco (*) ao campo 'Nível de Cargo' no modal de adicionar funcionário (entidade)
- Atualizado teste empresa-dashboard-abas.test.tsx para refletir remoção da aba Pendências
- Atualizado tsconfig.json para excluir __tests__ do build de produção
- Renomeadas variáveis não utilizadas com prefixo _ para evitar warnings do ESLint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
     "types": ["@testing-library/jest-dom", "jest", "node"]
   },
   "include": ["next-env.d.ts", "jest.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "cypress", "__tests__/e2e", ".next", "dist", "build"]
+  "exclude": ["node_modules", "cypress", "__tests__", ".next", "dist", "build"]
 }
