--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,12 @@
     },
     "types": ["@testing-library/jest-dom", "jest", "node"]
   },
-  "include": ["next-env.d.ts", "jest.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "jest.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules", "cypress", "__tests__", ".next", "dist", "build"]
 }
